<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.inlay.hotelroomservice.presentation.viewmodels.editprofile.EditProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_general" />

        <LinearLayout
            android:id="@+id/add_photo_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:onClick="@{() -> viewModel.changePhoto()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_user_profile"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:scaleType="centerCrop"
                app:profileImageSrc="@{viewModel.userPhoto}"
                tools:src="@drawable/baseline_person_24" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_add_photo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/upload_photo"
                android:textAppearance="?attr/textAppearanceHeadline6" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_full_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/full_name"
            app:layout_constraintBottom_toBottomOf="@id/et_layout_full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_layout_full_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="36dp"
            android:hint="@{viewModel.fullName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_full_name_label"
            app:layout_constraintTop_toBottomOf="@id/add_photo_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:onTextChanged="@{viewModel::onFullNameChanged}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/email"
            app:layout_constraintBottom_toBottomOf="@id/et_layout_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_layout_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:hint="@{viewModel.email}"
            app:helperText="@{viewModel.supportEmailText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_full_name_label"
            app:layout_constraintTop_toBottomOf="@id/et_layout_full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:onTextChanged="@{viewModel::onEmailChanged}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:onClick="@{() -> viewModel.save()}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>